--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "merge": "^1.2.0",
-    "react-native": "^0.8.0"
+    "react-native": "^0.8.0",
+    "react-redux": "^0.8.2",
+    "redux": "^1.0.0-rc",
+    "redux-thunk": "^0.1.0",
+    "regenerator": "^0.8.36",
+    "reselect": "0.0.2"
   }
 }
