--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "invariant": "^2.1.0",
     "merge": "^1.2.0",
     "react-native": "^0.8.0",
     "react-redux": "^0.8.2",
