--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "merge": "^1.2.0",
     "react-native": "^0.8.0",
     "react-native-addressbook": "^1.2.0",
-    "react-redux": "^0.8.2",
-    "redux": "^1.0.0-rc",
+    "react-redux": "^0.9.0",
+    "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
     "regenerator": "^0.8.36",
     "reselect": "0.0.2"
