--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "bluebird": "^2.9.34",
     "invariant": "^2.1.0",
     "merge": "^1.2.0",
+    "ramda": "^0.17.1",
     "react-native": "^0.8.0",
     "react-native-addressbook": "^1.2.0",
+    "react-native-invertible-scroll-view": "^0.1.0",
     "react-redux": "^0.9.0",
     "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
     "regenerator": "^0.8.36",
-    "reselect": "0.0.2"
+    "reselect": "0.0.2",
+    "socket.io-client": "^1.3.6"
   }
 }
