--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-addressbook": "^1.2.0",
     "react-native-invertible-scroll-view": "^0.1.0",
     "react-native-keyboardevents": "^0.4.5",
+    "react-native-message-composer": "0.0.3",
     "react-redux": "^0.9.0",
     "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
