--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "redux": "^1.0.1",
     "redux-thunk": "^0.1.0",
     "regenerator": "^0.8.36",
-    "reselect": "0.0.2",
+    "reselect": "^1.1.0",
     "socket.io-client": "^1.3.6"
   }
 }
