--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "color": "^0.10.1",
     "invariant": "^2.1.0",
     "merge": "^1.2.0",
+    "moment": "^2.10.6",
     "ramda": "^0.17.1",
     "react-native": "^0.11.0",
     "react-native-addressbook": "^1.2.0",
