--- a/iOS/ColorChat.xcodeproj/xcshareddata/xcschemes/ColorChat.xcscheme
+++ b/iOS/ColorChat.xcodeproj/xcshareddata/xcschemes/ColorChat.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "ColorChat.app"
-               BlueprintName = "ColorMessager"
+               BlueprintName = "ColorChat"
                ReferencedContainer = "container:ColorChat.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -58,7 +58,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ColorChat.app"
-            BlueprintName = "ColorMessager"
+            BlueprintName = "ColorChat"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -81,7 +81,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ColorChat.app"
-            BlueprintName = "ColorMessager"
+            BlueprintName = "ColorChat"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -100,7 +100,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "ColorChat.app"
-            BlueprintName = "ColorMessager"
+            BlueprintName = "ColorChat"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
