Bold unread conversations

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -36,6 +36,8 @@
 		<string>WorkSans-Regular.otf</string>
 		<string>WorkSans-Medium.otf</string>
 		<string>WorkSans-Light.otf</string>
+		<string>WorkSans-Bold.otf</string>
+		<string>WorkSans-ExtraBold.otf</string>
 		<string>Whois-Mono.ttf</string>
 		<string>Tuffy.otf</string>
 		<string>SaniTrixieSans.ttf</string>
