--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "bluebird": "^2.9.34",
+    "bluebird": "^3.5.0",
     "color": "^0.10.1",
     "invariant": "^2.1.0",
     "merge": "^1.2.0",
     "moment": "^2.10.6",
     "ramda": "^0.18.0",
-    "react-native": "^0.17.0",
-    "react-native-addressbook": "^1.2.0",
-    "react-native-invertible-scroll-view": "^0.1.0",
-    "react-native-message-composer": "0.0.3",
-    "react-native-overlay": "^0.4.1",
-    "react-redux": "^3.1.0",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.44.0",
+    "react-native-contacts": "^0.8.1",
+    "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-invertible-scroll-view": "^1.0.0",
+    "react-native-message-composer": "^1.0.0",
+    "react-redux": "^5.0.4",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
-    "regenerator": "^0.8.36",
+    "regenerator-runtime": "^0.10.5",
     "reselect": "^2.0.1",
-    "socket.io-client": "^1.3.6"
+    "socket.io-client": "^1.3.6",
+    "uuid": "^3.0.1"
   }
 }
