--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "merge": "^1.2.0",
     "moment": "^2.10.6",
     "ramda": "^0.18.0",
-    "react": "^16.0.0-alpha.6",
-    "react-native": "^0.44.0",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.0",
     "react-native-contacts": "^0.8.1",
     "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-invertible-scroll-view": "^1.0.0",
