--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-invertible-scroll-view": "^1.0.0",
     "react-native-message-composer": "^1.0.0",
     "react-redux": "^5.0.4",
+    "realm": "^1.11.1",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
     "regenerator-runtime": "^0.10.5",
