--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.10.6",
     "ramda": "^0.18.0",
     "react": "16.0.0-alpha.12",
+    "react-gateway": "^2.7.0",
     "react-native": "0.48.0",
     "react-native-contacts": "^0.9.0",
     "react-native-deprecated-custom-components": "^0.1.0",
