--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
+# Cocoapods
+#
+iOS/Pods
+
 # Android/IJ
 #
 .idea
@@ -32,3 +36,8 @@ local.properties
 #
 node_modules/
 npm-debug.log
+
+# ColorChat 
+# 
+android/app/google-services.json
+iOS/ColorChat/GoogleService-Info.plist
