--- a/iOS/ColorChat.xcodeproj/xcshareddata/xcschemes/ColorChat-tvOS.xcscheme
+++ b/iOS/ColorChat.xcodeproj/xcshareddata/xcschemes/ColorChat-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -14,23 +14,37 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ColorChat.app"
-               BlueprintName = "ColorChat"
+               BlueprintIdentifier = "2D2A28121D9B038B00D4039D"
+               BuildableName = "libReact.a"
+               BlueprintName = "React-tvOS"
+               ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+               BuildableName = "ColorChat-tvOS.app"
+               BlueprintName = "ColorChat-tvOS"
                ReferencedContainer = "container:ColorChat.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
-            buildForTesting = "NO"
-            buildForRunning = "NO"
+            buildForTesting = "YES"
+            buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ColorChatTests.xctest"
-               BlueprintName = "ColorChatTests"
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "ColorChat-tvOSTests.xctest"
+               BlueprintName = "ColorChat-tvOSTests"
                ReferencedContainer = "container:ColorChat.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -42,13 +56,23 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "ColorChat-tvOSTests.xctest"
+               BlueprintName = "ColorChat-tvOSTests"
+               ReferencedContainer = "container:ColorChat.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ColorChat.app"
-            BlueprintName = "ColorChat"
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "ColorChat-tvOS.app"
+            BlueprintName = "ColorChat-tvOS"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -69,9 +93,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ColorChat.app"
-            BlueprintName = "ColorChat"
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "ColorChat-tvOS.app"
+            BlueprintName = "ColorChat-tvOS"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -88,9 +112,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ColorChat.app"
-            BlueprintName = "ColorChat"
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "ColorChat-tvOS.app"
+            BlueprintName = "ColorChat-tvOS"
             ReferencedContainer = "container:ColorChat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
