--- a/iOS/ColorChat/ColorChat.entitlements
+++ b/iOS/ColorChat/ColorChat.entitlements
@@ -2,9 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>Application ID</key>
-  <string>YOUR APPLICATION ID</string>
-  <key>Client Key</key>
-  <string>YOUR CLIENT KEY</string>
+	<key>aps-environment</key>
+	<string>development</string>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.soft.ColorChat</string>
+	</array>
 </dict>
 </plist>
