--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.48.0",
     "react-native-contacts": "^0.9.0",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-fcm": "^9.1.0",
     "react-native-invertible-scroll-view": "^1.0.0",
     "react-native-message-composer": "^1.0.0",
     "react-redux": "^5.0.4",
