--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,21 @@ import com.android.build.OutputFile
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+def getPassword(String currentUser, String keyChain) {
+   def stdout = new ByteArrayOutputStream()
+   def stderr = new ByteArrayOutputStream()
+   exec {
+       commandLine 'security', '-q', 'find-generic-password', '-a', currentUser, '-s', keyChain, '-w'
+       standardOutput = stdout
+       errorOutput = stderr
+       ignoreExitValue true
+   }
+   //noinspection GroovyAssignabilityCheck
+   stdout.toString().trim()
+}
+
+def releaseKeyPass = getPassword("colorchat","colorchat-release-key")
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -103,6 +118,24 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        debug {
+            if (project.hasProperty('COLORCHAT_RELEASE_STORE_FILE')) {
+                storeFile file(COLORCHAT_RELEASE_STORE_FILE)
+                storePassword releaseKeyPass
+                keyAlias COLORCHAT_RELEASE_KEY_ALIAS
+                keyPassword releaseKeyPass
+            }            
+        }
+        release {
+            if (project.hasProperty('COLORCHAT_RELEASE_STORE_FILE')) {
+                storeFile file(COLORCHAT_RELEASE_STORE_FILE)
+                storePassword releaseKeyPass
+                keyAlias COLORCHAT_RELEASE_KEY_ALIAS
+                keyPassword releaseKeyPass
+            }
+        }
+    }
     splits {
         abi {
             reset()
@@ -115,6 +148,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
