--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,5 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+COLORCHAT_RELEASE_STORE_FILE=colorchat-release-key.keystore
+COLORCHAT_RELEASE_KEY_ALIAS=colorchat-key-alias
