--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "reselect": "^2.0.1",
     "socket.io-client": "^1.3.6",
     "uuid": "^3.0.1"
+  },
+  "rnpm": {
+    "assets": [
+      "./fonts/"
+    ]
   }
 }
