--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "color": "^0.10.1",
     "invariant": "^2.1.0",
     "merge": "^1.2.0",
-    "moment": "^2.10.6",
+    "moment": "https://github.com/tqc/moment#no-dynamic-import",
     "ramda": "^0.18.0",
     "react": "16.0.0-alpha.12",
     "react-gateway": "^2.7.0",
     "react-native": "0.48.0",
     "react-native-contacts": "^0.9.0",
-    "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-fcm": "^9.1.0",
     "react-native-invertible-scroll-view": "^1.0.0",
     "react-native-message-composer": "^1.0.0",
+    "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.4",
-    "realm": "^1.11.1",
+    "realm": "^1.13.0",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
     "regenerator-runtime": "^0.10.5",
