Finish Firebase integration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-firebase')
     compile project(':react-native-sms')
     implementation project(':react-native-firebase')
     implementation "com.google.android.gms:play-services-base:15.0.1"
