Get notifications working on iOS and Android

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.57.8",
     "react-native-contacts": "^3.1.2",
     "react-native-deprecated-custom-components": "^0.1.1",
-    "react-native-firebase": "^4.3.7",
+    "react-native-device-info": "^0.26.2",
+    "react-native-firebase": "^5.2.2",
     "react-native-invertible-scroll-view": "^1.1.1",
     "react-native-sms": "^1.6.0",
     "react-navigation": "^2.9.1",
