--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -2,9 +2,11 @@ platform :ios, '9.0'
 
 target 'ColorChat' do
 
-  pod 'Firebase/Core', '~> 5.3.0'
-  pod 'Firebase/Messaging', '~> 5.3.0'
+  pod 'Firebase/Core', '~> 5.15.0'
+  pod 'Firebase/Messaging', '~> 5.15.0'
   
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'ColorChatTests' do
     inherit! :search_paths
   end
