--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-device-info": "^0.26.2",
     "react-native-firebase": "^5.2.2",
+    "react-native-gesture-handler": "^1.0.15",
     "react-native-invertible-scroll-view": "^1.1.1",
+    "react-native-screens": "^1.0.0-alpha.22",
     "react-native-sms": "^1.6.0",
-    "react-navigation": "^2.9.1",
+    "react-navigation": "^3.2.1",
     "react-redux": "^5.0.4",
     "realm": "^2.13.0",
     "redux": "^3.0.5",
