--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-firebase": "^5.2.2",
     "react-native-gesture-handler": "^1.0.15",
     "react-native-invertible-scroll-view": "^1.1.1",
+    "react-native-iphone-x-helper": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-sms": "^1.6.0",
     "react-navigation": "^3.2.1",
