--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.5.0",
     "color": "^0.10.1",
     "invariant": "^2.1.0",
+    "memoize-one": "^5.0.0",
     "merge": "^1.2.0",
     "moment": "https://github.com/tqc/moment#no-dynamic-import",
     "prop-types": "^15.6.2",
@@ -24,6 +25,7 @@
     "react-native-invertible-scroll-view": "^1.1.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-segmented-control-tab": "^3.4.0",
     "react-native-sms": "^1.6.0",
     "react-navigation": "^3.2.1",
     "react-redux": "^5.0.4",
