--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,6 +157,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-svg')
     compile project(':react-native-screens')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-firebase')
