--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -28,6 +28,9 @@ target 'ColorChat' do
 
   pod 'RNScreens', :path => '../node_modules/react-native-screens'
 
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'ColorChatTests' do
     inherit! :search_paths
   end
