--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-native-invertible-scroll-view": "^1.1.1",
     "react-native-iphone-x-helper": "^1.2.0",
+    "react-native-keyboard-aware-scrollview": "^2.0.0",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-sms": "^1.6.0",
