--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
     <application
       android:name=".MainApplication"
       android:allowBackup="false"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name" android:icon="@mipmap/ic_launcher_square" android:roundIcon="@mipmap/ic_launcher_round"
+
       android:theme="@style/AppTheme">
         <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
             <intent-filter>
