--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: "com.android.application"
-apply plugin: "kotlin-android"
 
 import com.android.build.OutputFile
 
@@ -158,6 +157,7 @@ android {
 }
 
 dependencies {
+    implementation project(':realm')
     compile project(':react-native-svg')
     compile project(':react-native-screens')
     compile project(':react-native-gesture-handler')
@@ -168,13 +168,11 @@ dependencies {
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
-    compile project(':realm')
     compile project(':react-native-contacts')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    implementation project(':watermelondb')  // ⬅️ This!
-
+    implementation project(':react-native-sqlite-storage')
 }
 
 // Run this once to be able to run the application with BUCK
