--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-sms": "^1.6.0",
+    "react-native-sqlite-storage": "^3.3.10",
     "react-native-svg": "^9.2.4",
     "react-navigation": "^3.2.1",
     "react-redux": "^5.0.4",
