--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'ColorChat'
+include ':react-native-color-camera'
+project(':react-native-color-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-color-camera/android')
 include ':react-native-svg'
 project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':react-native-screens'
