--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -32,6 +32,8 @@ target 'ColorChat' do
   
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'STColorCamera', :path => '../node_modules/react-native-color-camera'
+
   target 'ColorChatTests' do
     inherit! :search_paths
   end
