--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,18 +157,18 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
+    implementation project(':react-native-sms')
+    implementation project(':react-native-screens')
+    implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-contacts')
     implementation project(':react-native-color-camera')
-    compile project(':react-native-svg')
-    compile project(':react-native-screens')
-    compile project(':react-native-gesture-handler')
-    compile project(':react-native-firebase')
-    compile project(':react-native-device-info')
-    compile project(':react-native-sms')
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
-    compile project(':react-native-contacts')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
