--- a/iOS/ColorChat/Info.plist
+++ b/iOS/ColorChat/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>20</string>
+	<string>21</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Color Chat uses your camera to capture nearby colors.</string>
 	<key>NSContactsUsageDescription</key>
 	<string>Color Chat uses your contacts to show you who you can chat with.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
