--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-svg": "^9.2.4",
     "react-navigation": "^3.2.1",
-    "react-redux": "^5.0.4",
+    "react-redux": "5.0.7",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.3",
     "regenerator-runtime": "^0.10.5",
