--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -34,6 +34,10 @@ target 'ColorChat' do
 
   pod 'STColorCamera', :path => '../node_modules/react-native-color-camera'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'ColorChatTests' do
     inherit! :search_paths
   end
