--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.0",
+    "@react-native-community/netinfo": "^3.2.1",
     "bluebird": "^3.5.0",
     "color": "^0.10.1",
     "invariant": "^2.1.0",
@@ -14,14 +16,14 @@
     "moment": "https://github.com/tqc/moment#no-dynamic-import",
     "prop-types": "^15.6.2",
     "ramda": "^0.18.0",
-    "react": "16.6.3",
+    "react": "16.8.3",
     "react-gateway": "^3.0.0",
-    "react-native": "^0.58.6",
+    "react-native": "^0.59.10",
     "react-native-contacts": "^3.1.2",
     "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-device-info": "^0.26.2",
     "react-native-firebase": "^5.2.2",
-    "react-native-gesture-handler": "^1.0.15",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-invertible-scroll-view": "^1.1.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
@@ -31,9 +33,9 @@
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-svg": "^9.2.4",
     "react-navigation": "^3.2.1",
-    "react-redux": "5.0.7",
-    "redux": "^3.0.5",
-    "redux-thunk": "^1.0.3",
+    "react-redux": "7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.10.5",
     "reselect": "^2.0.1",
     "socket.io-client": "^1.3.6",
@@ -45,10 +47,11 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "24.1.0",
-    "jest": "24.1.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3"
   }
 }
