--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,16 +9,8 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.CAMERA"/>
-  <uses-feature android:name="android.hardware.camera2.full"/>
 
-  <application
-      android:name=".MainApplication"
-      android:allowBackup="false"
-      android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher_square"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:theme="@style/AppTheme"
-      android:networkSecurityConfig="@xml/network_security_config">
+  <application android:name=".MainApplication" android:allowBackup="false" android:label="@string/app_name" android:icon="@mipmap/ic_launcher_square" android:roundIcon="@mipmap/ic_launcher_round" android:theme="@style/AppTheme" android:networkSecurityConfig="@xml/network_security_config">
     <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
       <intent-filter>
         <action android:name="com.google.firebase.MESSAGING_EVENT" />
