--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -38,14 +38,14 @@ target 'ColorChat' do
   
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
-  pod 'STColorCamera', :path => '../node_modules/react-native-color-camera'
+  pod 'STColorCamera', :path => '../../react-native-color-camera'
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
   pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
   
   pod 'react-native-contacts', :path => '../node_modules/react-native-contacts'
-  
+
   target 'ColorChatTests' do
     inherit! :search_paths
   end
