--- a/package.json
+++ b/package.json
@@ -28,17 +28,19 @@
     "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-device-info": "^0.26.2",
     "react-native-firebase": "^5.5.6",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-invertible-scroll-view": "^1.1.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scrollview": "^2.0.0",
-    "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-sms": "^1.9.0",
     "react-native-sqlite-storage": "^3.3.10",
     "react-native-svg": "^9.2.4",
-    "react-navigation": "^3.2.1",
+    "react-navigation": "^4.0.10",
     "react-navigation-hooks": "^1.1.0",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "7.1.0",
     "redux": "4.0.2",
     "redux-devtools-extension": "^2.13.8",
