Typing + bug fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ColorChat",
+  "name": "color-chat",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,9 +21,9 @@
     "moment": "https://github.com/tqc/moment#no-dynamic-import",
     "prop-types": "^15.6.2",
     "ramda": "^0.18.0",
-    "react": "16.8.6",
+    "react": "16.9.13",
     "react-gateway": "^3.0.0",
-    "react-native": "0.60.6",
+    "react-native": "0.60.23",
     "react-native-contacts": "^5.0.3",
     "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-device-info": "^0.26.2",
@@ -65,9 +65,9 @@
     "@types/jest": "^24.0.18",
     "@types/memoize-one": "^4.1.1",
     "@types/ramda": "^0.26.21",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.9.13",
     "@types/react-gateway": "^2.8.3",
-    "@types/react-native": "^0.60.13",
+    "@types/react-native": "^0.60.23",
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.2",
     "@types/react-test-renderer": "^16.9.0",
