--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,7 +7,7 @@ project(':@react-native-community_netinfo').projectDir = new File(rootProject.pr
 include ':@react-native-community_async-storage'
 project(':@react-native-community_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/async-storage/android')
 include ':react-native-color-camera'
-project(':react-native-color-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-color-camera/android')
+project(':react-native-color-camera').projectDir = new File(rootProject.projectDir, '../../react-native-color-camera/android')
 include ':react-native-svg'
 project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':react-native-screens'
